# mycellium_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rapberry.json  something.json
benchmarking/: Cargo.toml
benchmarking/src/camera/: camera.rs
benchmarking/src/common/: continuous_types.rs  metrics_collector.rs  mod.rs  types.rs
benchmarking/src/continuous/: consumer.rs  provider.rs
benchmarking/src/request_response/: consumer.rs  provider.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/core/: application.rs  listener.rs  messages.rs  mod.rs
core/src/core/application/: consumer.rs  mod.rs  provider.rs
core/src/utils/: id_generator.rs  mod.rs  storage.rs
core_impl/: Cargo.toml
core_impl/src/: lib.rs
core_impl/src/core/application/: messages.rs  mod.rs  provider.rs
macros/: Cargo.toml
macros/src/: common.rs  lib.rs  naming.rs
macros/src/consumer/: consume_attribute_macro.rs  mod.rs
macros/src/provider/: mod.rs  provide_attribute_macro.rs
primitive_derives/: Cargo.toml
primitive_derives/src/: lib.rs  provider_macro.rs
primitive_derives/src/provider/: provide_attribute_macro.rs
src/: main.rs
src/core/application/: mod.rs  provider.rs
tests/: Cargo.toml
tests/tests/: continuous.rs  discovery.rs  request_response.rs
usage_examples/: Cargo.toml
usage_examples/src/: consumer_impl.rs  discoveries_and_topics_qos.rs  main.rs
usage_examples/src/example_messages/: face_recognition.rs  mod.rs
